--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "slavs-monsters",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https//V1Zak.github.io/Cats_Search_React",
+  "homepage": "https://v1zak.github.io/Cats_Search_React/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
